<resources>
    <string name="app_name">HikeShare</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_hike">HikeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="offline">Offline</string>
    <string name="compass">Compass</string>
    <string name="display_markers">Display Markers</string>
    <string name="power_save_enabled">Power Save Enabled</string>
    <string name="map_source">Map Source</string>
    <string name="openkmlfile">Open KMl File</string>

    <string name="download_by_region">Download by region</string>
    <string name="download_by_path">Download by path</string>

    <!--Main Activity Strings-->
    <string name="gohike">Go Hike!</string>
    <string name="maptilemanager">Map Tile Manager</string>
    <string name="myhikes">My Hikes</string>
    <string name="customize">Customize</string>

    <!--Attribution Strings-->
    <string name="usgs_credit">USGS</string>
    <string name="osm_credit">© OpenStreetMap contributors</string>
    <string name="open_topo_map_credit">© OpenStreetMap -Mitwirkende, SRTM | Affichage de la carte: © OpenTopoMap (CC-BY-SA)</string>

    <string name="choose_action">Choose an action</string>


    <!--String Arrays-->
    <string-array name="overlay_items">
        <item>Archery</item>
        <item>Boat Ramp</item>
        <item>Boating</item>
        <item>Campground</item>
        <item>Canoeing</item>
        <item>Climbing</item>
        <item>Feature</item>
        <item>XC Skiing</item>
        <item>Fishing</item>
        <item>Hang Gliding</item>
        <item>Kayaking</item>
        <item>Marker</item>
        <item>Police</item>
        <item>Route</item>
        <item>Snowboarding</item>
        <item>Swimming</item>
    </string-array>

    <string-array name="map_sources">
        <item>Mapnik</item>
        <item>USGS National Map(Topo)</item>
        <item>USGS National Map(Sat)</item>
        <item>OpenTopoMap</item>
        <item>HikeBikeMap</item>
    </string-array>

    <!--Map Source Names-->
    <string name="mapnik">Mapnik</string>
    <string name="USGS_topo">USGS National Map(Topo)</string>
    <string name="USGS_sat">USGS National Map(Sat)</string>
    <string name="open_topo_map">OpenTopoMap</string>
    <string name="hike_bike_map">HikeBikeMap</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Customize Activity Strings -->
    <string name="settings_follow_me">Follow Location</string>
    <string name="settings_display_map_compass">Display Map Compass</string>
    <string name="settings_default_source">Default Map Source</string>
    <string name="settings_offline_mode_enabled">Offline Mode Enabled</string>
    <string name="settings_display_scale_bar">Display Map Scale Bar</string>
    <string name="settings_display_zoom_buttons_bar">Display Map Zoom Buttons</string>
    <string name="settings_powersave_mode">Powersave Mode</string>

    <!-- Map Tile Manager Activity Strings -->
    <string name="cache_max_size">Maximum Allowed Tile Cache Size</string>
    <string name="cache_size">Current Size of the Tile Cache</string>
    <string name="pending_job_count">Pending Job Count</string>
    <string name="cache_info_title">General Tile Cache Information</string>
    <string name="browse_tile_cache">Browse Tile Cache</string>
    <string name="edit_tile_cache">View/Edit Tile Cache</string>
    <string name="purge_tile_cache">Purge Tile Cache</string>
    <string name="purge_cache_source">Purge a Specific Tile Source</string>
    <string name="download_region">Download New Region</string>
    <string name="source_tile_count">(Source : Tile Count)</string>

    <!-- Regional Tile Download -->
    <string name="download_region_title">Download Tiles By Region</string>
    <string name="download_path_title">Download Tiles By Path</string>


</resources>
