<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/map_source">
        <menu android:checkableBehavior="single">
            <group android:checkableBehavior="single">
                <item android:id="@+id/hikeMenuMapnik"
                    android:title="@string/mapnik"/>
                <item android:id="@+id/hikeMenuUSGSTopo"
                    android:title="@string/USGS_topo"
                    android:checked="true"/>
                <item android:id="@+id/hikeMenuUSGSSat"
                    android:title="@string/USGS_sat"/>
                <item android:id="@+id/hikeMenuOpenTopo"
                    android:title="@string/open_topo_map"/>
                <item android:id="@+id/hikeMenuHikeBike"
                    android:title="@string/hike_bike_map"/>
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item android:id="@+id/downloadMenuRegion"
            android:title="@string/download_by_region"
            android:checked="true"/>
        <item android:id="@+id/downloadMenuPath"
            android:title="@string/download_by_path" />
    </group>


</menu>