<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csci405.hikeshare.Activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:id="@+id/main_activity_GoHike_btn"
            android:text="@string/gohike"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:id="@+id/main_activity_MyHikes_btn"
            android:text="@string/myhikes"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:id="@+id/main_activity_Explore_btn"
            android:text="@string/explore"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:id="@+id/main_activity_Customize_btn"
            android:text="@string/customize"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
