<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csci405.hikeshare.Activities.CustomizeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".60"
                    android:text="@string/settings_default_source"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:entries="@array/map_sources"
                    android:id="@+id/map_source_Spinner"></Spinner>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_follow_me"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/show_map_markers_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>
                
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_display_map_compass"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/show_map_compass_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_display_scale_bar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/show_scale_bar_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_display_zoom_buttons_bar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/show_zoom_buttons_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_powersave_mode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/powersave_mode_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".143"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/settings_offline_mode_enabled"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <ToggleButton
                    android:id="@+id/soffline_mode_enabled_Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"/>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
